tests/failing/test16.tail
let v2:[int]2 = reshape{[int],[1,2]}([10,30],iotaV(49)) in
let v3:[int]2 = snoc{[int],[1]}(transp{[int],[2]}(v2),iotaV(30)) in
let v6:<int>3 = catV{[int],[1,2]}(dropV{[int],[1]}(1,shape{[int],[2]}(v3)),[10,30]) in
let v10:[int]3 = transp2{[int],[3]}([2,1,3],reshape{[int],[2,3]}(v6,v2)) in
let v11:<int>3 = catV{[int],[1,2]}([10],shape{[int],[2]}(v3)) in
let v16:[int]3 = transp2{[int],[3]}([1,3,2],reshape{[int],[2,3]}(v11,v3)) in
let v21:[int]2 = reduce{[int],[2]}(addi,0,zipWith{[int,int,int],[3]}(muli,v10,v16)) in
i2d(reduce{[int],[0]}(addi,0,reduce{[int],[1]}(addi,0,v21)))
